--- a/apps/point_off_sale/templates/point_off_sale/snippets/header.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/header.html
@@ -26,7 +26,7 @@
            {% endif %}">
            Orders
         </a>
-        <button class="shrink-0 px-3 py-1.5 rounded-full bg-teal-400 text-white text-sm font-semibold px-4 shadow">
+        <button class="shrink-0 px-3 py-1.5 rounded-full bg-teal-400 text-white text-sm font-semibold  shadow">
           Direct Sale
         </button>
         {% endwith %}
