--- a/apps/point_off_sale/templates/point_off_sale/index.html
+++ b/apps/point_off_sale/templates/point_off_sale/index.html
@@ -5,7 +5,11 @@
 
 <div 
   class="flex flex-col min-h-screen bg-gray-100 font-sans"
-  x-data="{ orderOpen: false, cartCount: 0 }"
+  x-data="{ 
+    orderOpen: false, 
+    cartCount: 0,
+    createOpen: false,
+    }"
   @cart-updated.window="cartCount = $event.detail"
 >
 
@@ -282,7 +286,6 @@
           payment: '',
           subtotal: 0,
           previewOpen: false,
-          createOpen: false,
           submitting: false,
           get change() {
             const pay = Number(this.payment || 0);
@@ -336,33 +339,33 @@
 
          <button
           type="button"
-          value="create_order"
-          class="w-full bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white font-semibold py-3 rounded-lg text-sm transition touch-manipulation"
           id="process-create-order"
+          class="w-full bg-blue-600 hover:bg-blue-700 active:bg-blue-800 text-white font-semibold py-3 rounded-lg text-sm transition touch-manipulation"
           @click="createOpen = true"
         >
           Buat Order
         </button>
+        
       
         <!-- Popup preview -->
         {% include "point_off_sale/snippets/popup-confirm-payment.html" %}
-        {% include "point_off_sale/snippets/popup-create-order.html" %}
       </form>
       <!-- End Payment section button -->
       
     </div>
   </div>
   
-    <!-- Backdrop (mobile) -->
-    <div
+  <!-- Backdrop (mobile) -->
+  <div
       id="order-backdrop"
       class="fixed inset-0 bg-black/40 z-20 md:hidden"
       x-show="orderOpen"
       x-transition.opacity
       @click="orderOpen = false"
-    ></div>
-
-  </div>
+      ></div>
+      
+    </div>
+    {% include "point_off_sale/snippets/popup-create-order.html" %}
 </div>
 
 {% endblock %}
